--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar{
-    width: 0px;
+    display: none;
 }
 
 .nav-pills .active {
@@ -20,4 +20,7 @@
 
 .nav-tabs .nav-link {
     color: #adb5bd;
+}
+#formPesan::-webkit-scrollbar {
+    width: 0px;
 }
